force-app/main/default/objects/Interview_Stage_Team_Member__c/Interview_Stage_Team_Member__c.object-meta.xml
<CustomObject>
    <compactLayoutAssignment
  >Interview_Stage_Team_Member_Compact</compactLayoutAssignment>
    <label>Interview Stage Team Member</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Stage Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>