force-app/main/default/objects/Interview_Stage_Team_Member__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <label>Interview Stage</label>
    <referenceTo>Interview_Stage__c</referenceTo>
    <relationshipLabel>Interview Stage Team Members</relationshipLabel>
    <relationshipName>Interview_Stage_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>