force-app/main/default/objects/Interview_Stage_Team_Member__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Interview Stage Team Members</relationshipLabel>
    <relationshipName>Interview_Stage_Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>